--- a/index.html
+++ b/index.html
@@ -5,155 +5,56 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Lịch học IELTS hàng ngày của TTN</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="styles.css" />
+  <script defer src="script.js"></script>
 </head>
 <body>
-  <div class="scene">
-    <!-- Flying birds -->
-    <div class="bird bird--1" aria-hidden="true">
-      <svg viewBox="0 0 64 32" xmlns="http://www.w3.org/2000/svg">
-        <path d="M2 16 C14 6, 22 6, 32 16 C42 26, 50 26, 62 16" fill="none" stroke="#333" stroke-width="2"/>
-        <circle cx="10" cy="14" r="2" fill="#333"/>
-      </svg>
-    </div>
-    <div class="bird bird--2" aria-hidden="true">
-      <svg viewBox="0 0 64 32" xmlns="http://www.w3.org/2000/svg">
-        <path d="M2 16 C14 6, 22 6, 32 16 C42 26, 50 26, 62 16" fill="none" stroke="#333" stroke-width="2"/>
-        <circle cx="10" cy="14" r="2" fill="#333"/>
-      </svg>
-    </div>
+  <svg width="0" height="0" aria-hidden="true" focusable="false">
+    <defs>
+      <filter id="squiggle">
+        <feTurbulence type="fractalNoise" baseFrequency="0.010" numOctaves="3" seed="2" result="noise">
+          <animate attributeName="baseFrequency" dur="4s" values="0.010;0.018;0.012;0.010" repeatCount="indefinite"/>
+          <animate attributeName="seed" dur="2.4s" values="2;5;9;2" repeatCount="indefinite"/>
+        </feTurbulence>
+        <feDisplacementMap in="SourceGraphic" in2="noise" scale="2">
+          <animate attributeName="scale" dur="4s" values="1;3;2;1" repeatCount="indefinite"/>
+        </feDisplacementMap>
+      </filter>
+    </defs>
+  </svg>
 
-    <!-- Playful pets -->
-    <div class="playground" aria-hidden="true">
-      <div class="dog">
-        <svg viewBox="0 0 80 60" xmlns="http://www.w3.org/2000/svg">
-          <ellipse cx="40" cy="40" rx="26" ry="16" fill="#FFE9A6" stroke="#FFC107" stroke-width="3"/>
-          <circle cx="54" cy="34" r="10" fill="#FFE9A6" stroke="#FFC107" stroke-width="3"/>
-          <circle cx="58" cy="32" r="2" fill="#333"/>
-          <rect class="tail" x="12" y="26" width="18" height="6" rx="3" fill="#FFC107"/>
-        </svg>
-      </div>
-      <div class="cat">
-        <svg viewBox="0 0 80 60" xmlns="http://www.w3.org/2000/svg">
-          <circle cx="36" cy="36" r="16" fill="#FFF3C4" stroke="#FFC107" stroke-width="3"/>
-          <polygon points="24,24 32,16 36,26" fill="#FFF3C4" stroke="#FFC107" stroke-width="2"/>
-          <polygon points="48,24 40,16 36,26" fill="#FFF3C4" stroke="#FFC107" stroke-width="2"/>
-          <circle cx="32" cy="36" r="2.3" fill="#333"/>
-          <circle cx="40" cy="36" r="2.3" fill="#333"/>
-          <polygon points="35,40 37,40 36,42" fill="#D48806"/>
-        </svg>
-      </div>
-    </div>
-
-    <!-- Board with schedule and climbing monkey -->
-    <div class="container">
-      <div class="border-wrap">
-        <div class="monkey" aria-hidden="true">
-          <svg viewBox="0 0 80 140" xmlns="http://www.w3.org/2000/svg">
-            <circle cx="40" cy="36" r="22" fill="#FFD77A" stroke="#FFC107" stroke-width="3"/>
-            <circle cx="30" cy="32" r="4" fill="#333"/>
-            <circle cx="50" cy="32" r="4" fill="#333"/>
-            <ellipse cx="40" cy="44" rx="6" ry="4" fill="#D48806"/>
-            <rect x="28" y="58" width="24" height="50" rx="10" fill="#FFD77A" stroke="#FFC107" stroke-width="3"/>
-            <rect x="18" y="72" width="10" height="40" rx="5" fill="#FFE9A6" stroke="#FFC107" stroke-width="3"/>
-            <rect x="52" y="72" width="10" height="40" rx="5" fill="#FFE9A6" stroke="#FFC107" stroke-width="3"/>
-            <path d="M60 110 q18 12 10 24" fill="none" stroke="#FFC107" stroke-width="6" stroke-linecap="round"/>
-          </svg>
-        </div>
-
-        <header>
-          <h1 class="title">Lịch học IELTS hàng ngày của TTN</h1>
-          <div class="actions">
-            <button class="btn" onclick="window.print()">🖨️ In / Lưu PDF</button>
-          </div>
-          <div class="paws" aria-hidden="true">
-            <div class="paw"></div><div class="paw"></div><div class="paw"></div><div class="paw"></div>
-          </div>
-        </header>
-
-        <section class="grid">
-          <article class="card">
-            <div class="time">🌤️ 9h00–11h00 <span class="badge">Buổi sáng</span></div>
-            <h3>Reading</h3>
-            <p>Ôn và luyện đọc chuyên sâu.</p>
-            <ul class="list">
-              <li>Làm bài đọc (2–3 passage) + kiểm tra đáp án.</li>
-              <li>Ghi chú từ vựng &amp; cấu trúc quan trọng.</li>
-              <li>Rút kinh nghiệm: loại câu hỏi bạn hay sai.</li>
-            </ul>
-          </article>
-
-          <article class="card">
-            <div class="time">🌞 13h00–15h00 <span class="badge">Buổi chiều</span></div>
-            <h3>Listening</h3>
-            <p>Luyện nghe tập trung &amp; ghi chép.</p>
-            <ul class="list">
-              <li>Làm 1–2 test; nghe lại phần sai.</li>
-              <li>Ghi chép keyword / numbers / names.</li>
-              <li>Chép chính tả 5–10 phút để tăng độ chính xác.</li>
-            </ul>
-          </article>
-
-          <article class="card">
-            <div class="time">🌙 22h30–00h00 <span class="badge">Buổi tối</span></div>
-            <h3>Speaking &amp; Luyện đề Reading/Listening</h3>
-            <p>Luyện nói tự nhiên + làm đề bổ sung.</p>
-            <ul class="list">
-              <li>Speaking: Part 1–2–3 (ghi âm 10–15 phút).</li>
-              <li>Chọn 1 đề Reading/Listening để củng cố.</li>
-              <li>Tự đánh giá: 3 điểm tốt &amp; 1 điểm cần cải thiện.</li>
-            </ul>
-          </article>
-        </section>
-
-        <footer>
-            Cùng Trần Thế Nghĩa đạt mục tiêu trong tương lai nhé , FIGHTING!
-        </footer>
-      </div>
-    </div>
+  <div class="sky" aria-hidden="true">
+    <div class="sun" id="sun"></div>
+    <div class="moon" id="moon"></div>
+    <div class="cloud cloud--1"></div>
+    <div class="cloud cloud--2"></div>
+    <div class="cloud cloud--3"></div>
   </div>
+  <div class="stars" id="stars" aria-hidden="true">
+    <div class="star" style="top:12%;left:18%;animation-delay:.0s"></div>
+    <div class="star" style="top:22%;left:58%;animation-delay:.6s"></div>
+    <div class="star" style="top:34%;left:78%;animation-delay:1.1s"></div>
+    <div class="star" style="top:46%;left:36%;animation-delay:1.7s"></div>
+    <div class="star" style="top:58%;left:66%;animation-delay:2.2s"></div>
+    <div class="star" style="top:26%;left:86%;animation-delay:.9s"></div>
+    <div class="star" style="top:72%;left:22%;animation-delay:.4s"></div>
+    <div class="star" style="top:68%;left:74%;animation-delay:1.9s"></div>
+  </div>
+
+  <div class="container">
+    <nav class="tabs" role="tablist" aria-label="IELTS Tabs">
+      <button class="tab is-active" data-tab="tab\schedule.html" role="tab" aria-selected="true">📅 Lịch</button>
+      <button class="tab" data-tab="tab\translate.html" role="tab" aria-selected="false">🌐 Translate</button>
+      <button class="tab" data-tab="tab\idioms.html" role="tab" aria-selected="false">💡 Idioms</button>
+      <button class="tab" data-tab="tab\phrasal.html" role="tab" aria-selected="false">🔗 Phrasal Verbs</button>
+      <button class="tab" data-tab="tab\verbs.html" role="tab" aria-selected="false">🚀 Advanced Verb</button>
+      <span class="tab-indicator" aria-hidden="true"></span>
+    </nav>
+    <div id="content" class="content-area" aria-live="polite"></div>
+  </div>
+
+  <button class="fab" id="fabAnim" aria-pressed="false" title="Bật/Tắt animation">⏸️</button>
+  <button class="fab fab-secondary" id="fabSquiggle" aria-pressed="true" title="Bật/Tắt Squiggle">✨</button>
+  <div class="time-sync" id="timeSync" title="Trạng thái đồng bộ thời gian">Đang đồng bộ…</div>
 </body>
 </html>
-<body>
-    <div class="sky">
-      <div class="sun" id="sun"></div>
-      <div class="cloud cloud--1"></div>
-      <div class="cloud cloud--2"></div>
-      <div class="cloud cloud--3"></div>
-    </div>
-  
-    <!-- ... nội dung lịch ... -->
-  
-    <script>
-      function updateSunPosition() {
-        const sun = document.getElementById("sun");
-        const now = new Date();
-        const hours = now.getHours() + now.getMinutes()/60; 
-  
-        // Giả định mặt trời mọc 6h, lặn 18h
-        const start = 6, end = 18; 
-        let progress = (hours - start) / (end - start);
-        if(progress < 0) progress = 0;
-        if(progress > 1) progress = 1;
-  
-        // Góc bay vòng cung từ trái (horizon) qua đỉnh tới phải
-        const angle = progress * Math.PI; 
-        const radiusX = window.innerWidth/2 - 100; // bán kính ngang
-        const radiusY = 300; // bán kính dọc
-  
-        // Tính toạ độ
-        const cx = window.innerWidth/2;
-        const cy = window.innerHeight; // đường chân trời
-        const x = cx - radiusX * Math.cos(angle);
-        const y = cy - radiusY * Math.sin(angle);
-  
-        sun.style.left = x + "px";
-        sun.style.top = y + "px";
-      }
-  
-      updateSunPosition();
-      setInterval(updateSunPosition, 60000); // cập nhật mỗi phút
-      window.onresize = updateSunPosition;
-    </script>
-  </body>
-  
